// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly when default 1`] = `
<div>
  <button
    class="button blue"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button should render correctly when disabled 1`] = `
<div>
  <button
    class="button blue"
    disabled=""
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button should render correctly when secondary style 1`] = `
<div>
  <button
    class="button secondary blue"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button should render correctly when small size 1`] = `
<div>
  <button
    class="button small blue"
    type="button"
  >
    Button
  </button>
</div>
`;
